# htmlbrowser

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json
.github/workflows/: release.yml
examples/: 01-static.html  02-css-animation.html  03-svg-illustration.html  04-js-counter.html  05-js-rendered-list.html  06-inline-handlers.html  07-external-cdn.html  08-canvas-animation.html  README.md
examples/nested/: deep-spec.html
examples/showcase/: README.md  auth-flow-spec.html  handoff-notes.html  product-spec.html  prototype-onboarding.html  sales-dashboard.html  system-architecture.html  weekly-report.html
scripts/: bump-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  paths.rs  protocol.rs  state.rs  storage.rs  watcher.rs
src-tauri/src/commands/: fs.rs  mod.rs  preview.rs  search.rs  settings.rs  system.rs  workspace.rs
src/components/: preview.tsx  sidebar.tsx  topbar.tsx  welcome.tsx
src/hooks/: use-file-watcher.ts  use-menu-events.ts  use-updater.ts
src/lib/: tauri.ts
src/store/: preview.ts  settings.ts  sidebar.ts  workspace.ts
src/types/: index.ts
