[package]
name = "htmlbrowser-dev"
version = "0.1.0"
description = "Local-first viewer for AI-generated HTML artifacts"
authors = ["maail"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "htmlbrowser_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
once_cell = "1"
url = "2"
percent-encoding = "2"
thiserror = "2"
anyhow = "1"
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
